--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       min-height: 100vh;
       overflow-y: auto;
     }
+    h1 { 
+      color: #ffd700; 
+      margin-bottom: 10px;
+    }
 
     /* Container styling */
     .container {
@@ -163,7 +167,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Stage 5: The Genie's Enigma</h1>
+    <h1>Aladdin’s Rise to Wealth and Power</h1>
     
     <div class="riddle-box">
       <p class="riddle-text">
