--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
     <img src="./gen.png" alt="Magic Genie">
     <div id="genieMessage">
       <p>By the sands of time! The path is revealed!</p>
-      <p>Your wisdom has unlocked the ancient secret!</p>
+      <p>Your wisdom has unlocked the  secret!</p>
       <a href="https://adem1625.github.io/treasure-hunt-6.0/" style="color: #ffd700; text-decoration: none; font-weight: bold;">
-        Proceed to the Treasure →
+        Proceed to the next challenge →
       </a>
     </div>
   </div>
