--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div id="genieMessage">
       <p>By the sands of time! The path is revealed!</p>
       <p>Your wisdom has unlocked the  secret!</p>
-      <a href="https://adem1625.github.io/treasure-hunt-6.0/" style="color: #ffd700; text-decoration: none; font-weight: bold;">
+      <a href="https://adem1625.github.io/JSJDJDH/" style="color: #ffd700; text-decoration: none; font-weight: bold;">
         Proceed to the next challenge →
       </a>
     </div>
